Fixed alignment issues in new proj & Finalised About Us page

--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -28,3 +28,10 @@ margin-top: 7px;
 .tab-pane{
 
 }
+
+.tab-pane-header{
+	font-size: 25px;
+	color:#222;
+	padding-bottom: 10px;
+	bor
+}
