--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -10,5 +10,5 @@ This page header is displayed on all the pages
 	width: 100%;
 	height:5px;
 	background-color: #2A3744;    	/*gray1*/
-	color:#2A3744;						
+	color:transparent;						
 }
