--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,17 +22,6 @@ body{
 
 }
 
-.container
-{
-	padding: 0px !important;
-	width:100%;
-	padding-top: 10%;
-}
-
-.pview
-{
-	padding-top: 5%;
-}
 
 /*-----------Variables-----------------
 
